# suhuwenxue_app

./: LICENSE.txt  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dev-dist/: sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/font_icon/: demo_index.html  iconfont.css  iconfont.js  iconfont.json  xxx.html
src/components/: Welcome.vue
src/types/: auto-imports.d.ts  components.d.ts
